Remove java.security.manager for Java 23+ versions
This commit introduces a workaround to remove the
"-Djava.security.manager=allow" attribute when running the Child Eclipse
on Java 24 and later versions. This adjustment ensures compatibility
with the updated security manager behavior in Java 23+.

Fixes : https://github.com/eclipse-jdt/eclipse.jdt.debug/issues/627